--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,40 +1,17 @@
-/*basic css*/
-* {
-    padding: 0;
-    margin: 0;
-    outline: 0;
-}
-
-ul,
-ol {
-    list-style: none;
-}
 
 
 html {
   scroll-behavior: smooth;
 }
-body {
-    background-color: #ECECEC;
-    overflow-x: hidden;
-	 
-	  position: relative;
-}
+
 
 .container {
     padding-right: 15px;
     padding-left: 15px;
+    
 }
 
-.navbar-expand-lg > .container,
-.navbar-expand-lg > .container-fluid,
-.navbar-expand-lg > .container-lg,
-.navbar-expand-lg > .container-md,
-.navbar-expand-lg > .container-sm,
-.navbar-expand-lg > .container-xl {
-    padding-right: 15px;
-    padding-left: 15px;
-}
+
 
 /*top araea*/
 .tr-btn {
@@ -96,21 +73,7 @@ body {
     color:blue;
   } */
 
-  a.nuxt-link-active {
-    font-weight: bold;
-  }
-  /* exact link will show the primary color for only the exact matching link */
- 
-  a,
-a:visited {
-  text-decoration: none;
-  color: inherit;
-}
 
-.nuxt-link-active {
-    color: red;
-  }
-  
 
 /*subscribe area*/
 #subscribe {
@@ -166,4 +129,50 @@ a:visited {
     color: #A39D9D;
 
 }
+a.nuxt-link-active {
+    font-weight: bold;
+    
+  }
+  /* exact link will show the primary color for only the exact matching link */
+  a.nuxt-link-exact-active {
+    color: #00c58e;
+  }
+  
+  body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+      Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji,
+      Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+    margin: 0;
+    
+  }
+  
+  main {
+    margin: 0 auto;
+    padding: 0 1rem;
+    margin-top: 100px;
+    max-width: 1280px;
+    text-align: center;
+  }
+  img {
+    margin-bottom: 1rem;
+  }
+  
+  ul {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  li {
+    margin: 0 0.5rem;
+    padding: 0.25rem;
+    font-size: 1.2rem;
+  }
+  
+
+  a:hover {
+    color: #00c58e;
+    text-decoration: none;
+  }
   
